剣の軌道に合わせてパーティクル

--- a/SoulHunter.vcxproj
+++ b/SoulHunter.vcxproj
@@ -344,6 +344,7 @@
     <ClCompile Include="SourceCode\gamesystem\ParticleManager\ParticleObj.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ParticleManager\ParticleSoul.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ParticleManager\ParticleTex.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\ParticleManager\SwordParticle.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ParticleManager\ThornParticle.cpp" />
     <ClCompile Include="SourceCode\gamesystem\playerhelp\PlayerHelp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\player\Player.cpp" />
@@ -466,6 +467,7 @@
     <ClInclude Include="SourceCode\gamesystem\ParticleManager\ParticleObj.h" />
     <ClInclude Include="SourceCode\gamesystem\ParticleManager\ParticleSoul.h" />
     <ClInclude Include="SourceCode\gamesystem\ParticleManager\ParticleTex.h" />
+    <ClInclude Include="SourceCode\gamesystem\ParticleManager\SwordParticle.h" />
     <ClInclude Include="SourceCode\gamesystem\ParticleManager\ThornParticle.h" />
     <ClInclude Include="SourceCode\gamesystem\playerhelp\PlayerHelp.h" />
     <ClInclude Include="SourceCode\gamesystem\player\Player.h" />
