--- a/imgui.ini
+++ b/imgui.ini
@@ -84,9 +84,9 @@ Size=274,201
 Collapsed=0
 
 [Window][CameraWork]
-Pos=136,203
+Pos=135,362
 Size=262,249
-Collapsed=1
+Collapsed=0
 
 [Window][Boss]
 Pos=403,515
@@ -136,5 +136,10 @@ Collapsed=0
 [Window][playerWing]
 Pos=769,445
 Size=237,185
+Collapsed=0
+
+[Window][BossApp]
+Pos=60,60
+Size=178,184
 Collapsed=0
 
