--- a/imgui.ini
+++ b/imgui.ini
@@ -84,7 +84,7 @@ Size=274,201
 Collapsed=0
 
 [Window][CameraWork]
-Pos=135,362
+Pos=844,492
 Size=262,249
 Collapsed=0
 
@@ -116,7 +116,7 @@ Collapsed=0
 [Window][filter]
 Pos=705,413
 Size=72,82
-Collapsed=1
+Collapsed=0
 
 [Window][Mark]
 Pos=58,60
@@ -141,5 +141,10 @@ Collapsed=0
 [Window][BossApp]
 Pos=60,60
 Size=178,184
+Collapsed=0
+
+[Window][mapfilter]
+Pos=60,60
+Size=72,82
 Collapsed=0
 
