炎の攻撃終了

--- a/SoulHunter.vcxproj
+++ b/SoulHunter.vcxproj
@@ -316,6 +316,7 @@
     <ClCompile Include="SourceCode\gamesystem\backobj\BackTorch.cpp" />
     <ClCompile Include="SourceCode\gamesystem\backobj\Chest.cpp" />
     <ClCompile Include="SourceCode\gamesystem\boss\BossName.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\boss\FireBall.cpp" />
     <ClCompile Include="SourceCode\gamesystem\boss\FirstBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\boss\InterBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\boss\ResPornEnemy.cpp" />
@@ -439,6 +440,7 @@
     <ClInclude Include="SourceCode\gamesystem\backobj\BackTorch.h" />
     <ClInclude Include="SourceCode\gamesystem\backobj\Chest.h" />
     <ClInclude Include="SourceCode\gamesystem\boss\BossName.h" />
+    <ClInclude Include="SourceCode\gamesystem\boss\FireBall.h" />
     <ClInclude Include="SourceCode\gamesystem\boss\FirstBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\boss\InterBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\boss\ResPornEnemy.h" />
