--- a/SoulHunter.vcxproj.filters
+++ b/SoulHunter.vcxproj.filters
@@ -420,7 +420,7 @@
     <ClCompile Include="SourceCode\gamesystem\JsonObj\BossAppObj.cpp">
       <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClCompile>
-    <ClCompile Include="SourceCode\gamesystem\scenechange\BossAppChange.cpp">
+    <ClCompile Include="SourceCode\gamesystem\scenechange\BossSceneChange.cpp">
       <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\boss\FireBall.cpp">
@@ -428,6 +428,9 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\effect\BirdEnemyEffect.cpp">
       <Filter>SourceCords\gamesystem\effect\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\JsonObj\BossEndObj.cpp">
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -794,7 +797,7 @@
     <ClInclude Include="SourceCode\gamesystem\JsonObj\BossAppObj.h">
       <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\scenechange\BossAppChange.h">
+    <ClInclude Include="SourceCode\gamesystem\scenechange\BossSceneChange.h">
       <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\boss\FireBall.h">
@@ -802,6 +805,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\effect\BirdEnemyEffect.h">
       <Filter>SourceCords\gamesystem\effect\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\JsonObj\BossEndObj.h">
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
