--- a/SoulHunter.vcxproj.filters
+++ b/SoulHunter.vcxproj.filters
@@ -247,10 +247,10 @@
       <Filter>SourceCords\gamesystem\ui\TutoRial</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\scenechange\MapChange.cpp">
-      <Filter>SourceCords\gamesystem\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\scenechange\scenechange.cpp">
-      <Filter>SourceCords\gamesystem\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\save\Save.cpp">
       <Filter>SourceCords\gamesystem\save</Filter>
@@ -388,7 +388,7 @@
       <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\scenechange\BossSceneChange.cpp">
-      <Filter>SourceCords\gamesystem\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\boss\FireBall.cpp">
       <Filter>SourceCords\gamesystem\boss\Various</Filter>
@@ -618,10 +618,10 @@
       <Filter>SourceCords\gamesystem\ui\TutoRial</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scenechange\MapChange.h">
-      <Filter>SourceCords\gamesystem\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scenechange\scenechange.h">
-      <Filter>SourceCords\gamesystem\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\save\Save.h">
       <Filter>SourceCords\gamesystem\save</Filter>
@@ -762,7 +762,7 @@
       <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scenechange\BossSceneChange.h">
-      <Filter>SourceCords\gamesystem\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\boss\FireBall.h">
       <Filter>SourceCords\gamesystem\boss\Various</Filter>
@@ -915,9 +915,6 @@
     <Filter Include="SourceCords\gamesystem\scene">
       <UniqueIdentifier>{4b8a529f-ad04-4e67-bd89-5140066db1ce}</UniqueIdentifier>
     </Filter>
-    <Filter Include="SourceCords\gamesystem\scenechange">
-      <UniqueIdentifier>{6b1cdae9-8eae-43b6-9011-3cc929ef6cd8}</UniqueIdentifier>
-    </Filter>
     <Filter Include="SourceCords\gamesystem\ui">
       <UniqueIdentifier>{bffb2868-7d52-4569-bff5-92477e29db90}</UniqueIdentifier>
     </Filter>
@@ -1001,6 +998,9 @@
     </Filter>
     <Filter Include="SourceCords\engine\shake">
       <UniqueIdentifier>{2a7ab0e4-35b2-424d-b2f9-dff4e3205eff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\scene\scenechange">
+      <UniqueIdentifier>{6b1cdae9-8eae-43b6-9011-3cc929ef6cd8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
